--- a/.github/workflows/push_docker_hub.yml
+++ b/.github/workflows/push_docker_hub.yml
@@ -3,15 +3,15 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Push image to Docker Hub
+name: Build & Publish on Docker Hub
 
 on:
   push:
     tags: [ '*' ]
 
 jobs:
-  push_to_dockerhub:
-    name: Push Docker image to Docker Hub
+  push_docker_hub:
+    name: Build & Publish on Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
