--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -41,10 +41,10 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GH_TOKEN }}
       -
-        name: Build and push on platform AMD64
+        name: Build and push
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/amd64
+          platforms: linux/amd64, linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
